# pico-coremark

./: CMakeLists.txt  README.md
coremark/: core_main.c  core_portme.c  core_portme.h  coremark.h
